--- a/python-flask/templates/index.html
+++ b/python-flask/templates/index.html
@@ -7,7 +7,7 @@
 
     
     <div class="sample">
-      <h2>Welcome to my ToDO List</h2>
+      <h2>Welcome to my ToDO List (updated)</h2>
     </div>
     <div class="container">
       <form action="/" method="post">
